--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -35,7 +35,7 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .stat-icon {
@@ -77,8 +77,14 @@
 }
 
 .section-header h3 {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     color: rgb(157, 157, 189);
+    border-left: 4px solid rgb(157, 157, 189);
+    padding-left: 10px;
+}
+
+.section-content {
+    margin-top: 1.5rem;
 }
 
 .btn {
