--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -181,6 +181,11 @@
     border: 1px solid #e0e0e0;
 }
 
+.server-user-card.pending {
+    background-color: #f95d5d0a;
+    border: 1px solid #ff0000;
+}
+
 .server-user-header {
     font-size: 1rem;
     color: #1f2937;
