--- a/css/style.css
+++ b/css/style.css
@@ -299,4 +299,14 @@ footer {
     .status-item {
         flex: 1 1 100%;
     }
+
+    .section-header {
+        flex-wrap: wrap;
+        gap: 1rem;
+    }
+
+    .section-header input {
+        width: 100%;
+    }
+
 }
