--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -210,6 +210,17 @@
   filter: brightness(1.1);
 }
 
+.modal-btn:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+  transform: none;
+}
+
+.modal-btn:disabled:hover {
+  transform: none;
+  filter: none;
+}
+
 @media (max-width: 768px) {
   .modal {
     max-width: 95%;
